Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-30412

JSON_OBJECTAGG doesn't escape double quote in key

    XMLWordPrintable

Details

    Description

      MariaDB [(none)]> SELECT JSON_OBJECT('"', 1), JSON_OBJECTAGG('"', 1);
      +---------------------+------------------------+
      | JSON_OBJECT('"', 1) | JSON_OBJECTAGG('"', 1) |
      +---------------------+------------------------+
      | {"\"": 1}           | {""":1}                |
      +---------------------+------------------------+
      1 row in set (0.000 sec)
      
      

      works correctly in MySQL 5.6

      Attachments

        Issue Links

          Activity

            People

              danblack Daniel Black
              libertyit Rogers
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1h
                  1h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.