MDEV-30412: JSON_OBJECTAGG doesn't escape double quote in key